--- a/documentation/documents/diagnostics/index.html
+++ b/documentation/documents/diagnostics/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 3.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 3.1.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -39,6 +39,9 @@
             </li>
 		        <li>
 		          <a href="/marten/documentation">Documentation</a>
+		        </li>
+		        <li>
+		          <a href="/marten/migration_guide">Migration Guide</a>
 		        </li>
 		        <li>
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
@@ -99,7 +102,7 @@
 <p>Marten has a facility for listening and even intercepting document persistence events with the <code>IDocumentSessionListener</code> interface:</p>
 <pre><code class="language-csharp">&#xD;&#xA;public interface IDocumentSessionListener&#xD;&#xA;{&#xD;&#xA;    void BeforeSaveChanges(IDocumentSession session);&#xD;&#xA;&#xD;&#xA;    Task BeforeSaveChangesAsync(IDocumentSession session, CancellationToken token);&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;    void AfterCommit(IDocumentSession session, IChangeSet commit);&#xD;&#xA;&#xD;&#xA;    Task AfterCommitAsync(IDocumentSession session, IChangeSet commit, CancellationToken token);&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;    void DocumentLoaded(object id, object document);&#xD;&#xA;&#xD;&#xA;    void DocumentAddedForStorage(object id, object document);&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>You can build and inject your own listeners by adding them to the <code>StoreOptions</code> object you use to configure a <code>DocumentStore</code>:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var stub1 = new StubDocumentSessionListener();&#xD;&#xA;var stub2 = new StubDocumentSessionListener();&#xD;&#xA;&#xD;&#xA;using (var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.All;&#xD;&#xA;}))&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;var stub1 = new StubDocumentSessionListener();&#xD;&#xA;var stub2 = new StubDocumentSessionListener();&#xD;&#xA;&#xD;&#xA;using (var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.All;&#xD;&#xA;&#xD;&#xA;    _.Listeners.Add(stub1);&#xD;&#xA;    _.Listeners.Add(stub2);&#xD;&#xA;}))&#xD;&#xA;</code></pre>
 <p>The listeners can be used to modify an <code>IDocumentSession</code> and its related unit of work just before persisting. Marten itself will be using this mechanism
 internally to perform projections in the future.</p>
 <p>The following fake, sample listener demonstrates how you can query into the pending changes before making a transactional commit, and also how to
