--- a/documentation/documents/identity/index.html
+++ b/documentation/documents/identity/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 3.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 3.1.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -39,6 +39,9 @@
             </li>
 		        <li>
 		          <a href="/marten/documentation">Documentation</a>
+		        </li>
+		        <li>
+		          <a href="/marten/migration_guide">Migration Guide</a>
 		        </li>
 		        <li>
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
@@ -98,7 +101,7 @@
 be responsible for supplying the identifier.</li>
 <li><code>Guid</code>. If the id is a Guid, Marten will assign a new value for you when you persist the document for the first time if the id is empty.
 <em>And for the record, it's pronounced &quot;gwid&quot;</em>.</li>
-<li><code>CombGuid</code> is a <a href="https://en.wikipedia.org/wiki/Globally_unique_identifier#Sequential_algorithms">sequential Guid algorithm</a>. It can improve performance over the default Guid as it reduces fragmentation of the PK index. (More info soon)</li>
+<li><code>CombGuid</code> is a <a href="https://github.com/JasperFx/marten/blob/master/src/Marten/Schema/Identity/CombGuidIdGeneration.cs">sequential Guid algorithm</a>. It can improve performance over the default Guid as it reduces fragmentation of the PK index.</li>
 <li><code>Int</code> or <code>Long</code>. As of right now, Marten uses a <a href="http://stackoverflow.com/questions/282099/whats-the-hi-lo-algorithm">HiLo generator</a> approach to assigning numeric identifiers by document type.
 Marten may support Postgresql sequences or star-based algorithms as later alternatives.</li>
 <li>When the ID member of a document is not settable or not-public a <code>NoOpIdGeneration</code> strategy is used. This ensures that Marten does not set the ID itself, so the ID should be generated manually.</li>
