--- a/documentation/events/projections/custom/index.html
+++ b/documentation/events/projections/custom/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 3.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 3.1.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -39,6 +39,9 @@
             </li>
 		        <li>
 		          <a href="/marten/documentation">Documentation</a>
+		        </li>
+		        <li>
+		          <a href="/marten/migration_guide">Migration Guide</a>
 		        </li>
 		        <li>
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
@@ -94,11 +97,11 @@
 <h2 id="multistream-projections-using-viewprojection">Multistream Projections using ViewProjection</h2>
 <p>The <code>ViewProjection</code> class is an implementation of the <code>IProjection</code> that can handle building a projection from multiple streams.</p>
 <p>This can be setup from configuration like:</p>
-<pre><code class="language-csharp">&#xD;&#xA;StoreOptions(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.All;&#xD;&#xA;    _.Events.InlineProjections.AggregateStreamsWith&lt;QuestParty&gt;();&#xD;&#xA;    _.Events.ProjectView&lt;PersistedView, Guid&gt;()&#xD;&#xA;        .ProjectEvent&lt;ProjectionEvent&lt;QuestStarted&gt;&gt;((view, @event) =&gt; { view.Events.Add(@event.Data); view.StreamIdsForEvents.Add(@event.StreamId); })&#xD;&#xA;        .ProjectEvent&lt;MembersJoined&gt;(e =&gt; e.QuestId, (view, @event) =&gt; { view.Events.Add(@event); })&#xD;&#xA;        .ProjectEvent&lt;ProjectionEvent&lt;MonsterSlayed&gt;&gt;(e =&gt; e.Data.QuestId, (view, @event) =&gt; { view.Events.Add(@event.Data); view.StreamIdsForEvents.Add(@event.StreamId); })&#xD;&#xA;        .DeleteEvent&lt;QuestEnded&gt;()&#xD;&#xA;        .DeleteEvent&lt;MembersDeparted&gt;(e =&gt; e.QuestId)&#xD;&#xA;        .DeleteEvent&lt;MonsterDestroyed&gt;((session, e) =&gt; session.Load&lt;QuestParty&gt;(e.QuestId).Id);&#xD;&#xA;});&#xD;&#xA;</code></pre> 
+<pre><code class="language-csharp">&#xD;&#xA;StoreOptions(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.All;&#xD;&#xA;    _.Events.TenancyStyle = tenancyStyle;&#xD;&#xA;    _.Events.InlineProjections.AggregateStreamsWith&lt;QuestParty&gt;();&#xD;&#xA;    _.Events.ProjectView&lt;PersistedView, Guid&gt;()&#xD;&#xA;        .ProjectEventAsync&lt;QuestStarted&gt;((view, @event) =&gt; { view.Events.Add(@event); return Task.CompletedTask; })&#xD;&#xA;        .ProjectEventAsync&lt;MembersJoined&gt;(e =&gt; e.QuestId, (view, @event) =&gt; { view.Events.Add(@event); return Task.CompletedTask; })&#xD;&#xA;        .ProjectEventAsync&lt;ProjectionEvent&lt;MonsterSlayed&gt;&gt;(e =&gt; e.Data.QuestId, (view, @event) =&gt; { view.Events.Add(@event.Data); return Task.CompletedTask; })&#xD;&#xA;        .DeleteEvent&lt;QuestEnded&gt;()&#xD;&#xA;        .DeleteEvent&lt;MembersDeparted&gt;(e =&gt; e.QuestId)&#xD;&#xA;        .DeleteEvent&lt;MonsterDestroyed&gt;((session, e) =&gt; session.Load&lt;QuestParty&gt;(e.QuestId).Id);&#xD;&#xA;});&#xD;&#xA;</code></pre> 
  
 or through a class like: 
  
-<pre><code class="language-csharp">&#xD;&#xA;public class PersistViewProjection : ViewProjection&lt;PersistedView, Guid&gt;&#xD;&#xA;{&#xD;&#xA;    public PersistViewProjection()&#xD;&#xA;    {&#xD;&#xA;        ProjectEvent&lt;QuestStarted&gt;(Persist);&#xD;&#xA;        ProjectEvent&lt;MembersJoined&gt;(e =&gt; e.QuestId, Persist);&#xD;&#xA;        ProjectEvent&lt;MonsterSlayed&gt;((session, e) =&gt; session.Load&lt;QuestParty&gt;(e.QuestId).Id, Persist);&#xD;&#xA;        DeleteEvent&lt;QuestEnded&gt;();&#xD;&#xA;        DeleteEvent&lt;MembersDeparted&gt;(e =&gt; e.QuestId);&#xD;&#xA;        DeleteEvent&lt;MonsterDestroyed&gt;((session, e) =&gt; session.Load&lt;QuestParty&gt;(e.QuestId).Id);&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    private void Persist&lt;T&gt;(PersistedView view, T @event)&#xD;&#xA;    {&#xD;&#xA;        view.Events.Add(@event);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;</code></pre> 
+<pre><code class="language-csharp">&#xD;&#xA;public class PersistAsyncViewProjection : ViewProjection&lt;PersistedView, Guid&gt;&#xD;&#xA;{&#xD;&#xA;    public PersistAsyncViewProjection()&#xD;&#xA;    {&#xD;&#xA;        ProjectEventAsync&lt;QuestStarted&gt;(PersistAsync);&#xD;&#xA;        ProjectEventAsync&lt;MembersJoined&gt;(e =&gt; e.QuestId, PersistAsync);&#xD;&#xA;        ProjectEventAsync&lt;MonsterSlayed&gt;((session, e) =&gt; session.Load&lt;QuestParty&gt;(e.QuestId).Id, PersistAsync);&#xD;&#xA;        DeleteEvent&lt;QuestEnded&gt;();&#xD;&#xA;        DeleteEvent&lt;MembersDeparted&gt;(e =&gt; e.QuestId);&#xD;&#xA;        DeleteEvent&lt;MonsterDestroyed&gt;((session, e) =&gt; session.Load&lt;QuestParty&gt;(e.QuestId).Id);&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    private Task PersistAsync&lt;T&gt;(PersistedView view, T @event)&#xD;&#xA;    {&#xD;&#xA;        view.Events.Add(@event);&#xD;&#xA;        return Task.CompletedTask;&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;</code></pre> 
  
 `ProjectEvent` and `DeleteEvent` can operate on events that need a single or multiple Ids operated on. With `ProjectEvent` if a `List<TId>` is passed, the handler method will be called for each Id in the collection. With `DeleteEvent` if a `List<TId>` is passed, then each document tied to the Id in the collection will be removed. Each of these methods take various overloads that allow selecting the Id field implicitly, through a property or through two different Funcs `Func<IDocumentSession, TEvent, TId>` and `Func<TEvent, TId>`. 
  
