--- a/documentation/troubleshoot/index.html
+++ b/documentation/troubleshoot/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 3.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 3.1.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -39,6 +39,9 @@
             </li>
 		        <li>
 		          <a href="/marten/documentation">Documentation</a>
+		        </li>
+		        <li>
+		          <a href="/marten/migration_guide">Migration Guide</a>
 		        </li>
 		        <li>
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
@@ -123,14 +126,17 @@
 </tr>
 </tbody>
 </table>
+<p><strong>My query throws a <code>NotSupportedException</code> exception. Why? What to do?</strong></p>
+<p>Marten needs to translate LINQ queries to SQL in order to execute them against the database. This translation requires explicit support for all the query operators that are used. If your query operation is not covered, Marten will throw a <code>NotSupportedException</code>. In such a case, consider <a href="https://github.com/JasperFx/marten/issues/new">filing a feature request</a>. Lastly, as a mitigation, consider
+<a href="/marten/documentation/documents/querying/sql">hand-crafting the required query</a>.</p>
 <p><strong>How do I serialize to Camel case?</strong></p>
 <p>While it's possible to accommodate any serialization schemes by implementing a custom <code>ISerializer</code>, Marten's built-in serializer (Json.Net) can be set to serialize to Camel case through <code>StoreOptions.UseDefaultSerialization</code>:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(storeOptions =&gt;&#xD;&#xA;{&#xD;&#xA;    // Change default casing to CamelCase&#xD;&#xA;    storeOptions.UseDefaultSerialization(casing: Casing.CamelCase);&#xD;&#xA;</code></pre> 	
 <p><strong>How do I disable PLV8?</strong></p>
-<p>If you don't want PLV8 (required for Javascript transformations) related items in your database schema, you can disable PLV8 alltogether by setting <code>StoreOptions.PLV8Enabled</code> to false.</p>
+<p>If you don't want PLV8 (required for JavaScript transformations) related items in your database schema, you can disable PLV8 altogether by setting <code>StoreOptions.PLV8Enabled</code> to false.</p>
 <p><strong>Marten isn't giving me the diagnostic data that I need</strong></p>
 <p>If you cannot obtain the desired diagnostic data through Marten's <a href="/marten/documentation/documents/diagnostics">diagnostics</a>, consider using the <a href="https://www.npgsql.org/doc/logging.html">Npgsql logging facilities</a>, by hooking into <code>NpgsqlLogManager.Provider</code>, or by using the <a href="https://www.npgsql.org/doc/performance.html">performance counters exposed by Npgsql</a>.</p>
-<p>Lastly, if you feel that exposing the data should be the responsibility of Marten, consider <a href="https://github.com/JasperFx/marten/issues/new">filing a feature requset</a>.</p>
+<p>Lastly, if you feel that exposing the data should be the responsibility of Marten, consider <a href="https://github.com/JasperFx/marten/issues/new">filing a feature request</a>.</p>
 
 			      	</div>
 
