--- a/documentation/documents/customizing/foreign_keys/index.html
+++ b/documentation/documents/customizing/foreign_keys/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 3.1.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 3.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -47,7 +47,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/documents/customizing/duplicated_fields" title="Duplicated Fields for Faster Querying">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents/customizing/gin_or_gist_index" title="Gin or Gist Indexes">Next</a></li>
+		      	<li><a href="/marten/documentation/documents/customizing/full_text" title="Full Text Indexes">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -80,7 +80,7 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/customizing/gin_or_gist_index">Gin or Gist Indexes</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/customizing/full_text">Full Text Indexes</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/documents/customizing/duplicated_fields">Duplicated Fields for Faster Querying</a></p>
 
 		        </ul>
@@ -132,7 +132,7 @@ to save the new user first so that the issue will not fail with referential inte
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents/customizing/gin_or_gist_index">Gin or Gist Indexes</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/documents/customizing/full_text">Full Text Indexes</a>
 
 				        </span>
 			      	</nav>
